<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    android:background="#ffffffff"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textAppearance="?android:textAppearanceMedium" android:textSize="18.0sp" android:textStyle="bold" android:textColor="#ff333333" android:gravity="center|left" android:id="@+id/titledata" android:paddingLeft="15.0dip" android:paddingTop="5.0dip" android:paddingRight="5.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:text="@string/heading_info" android:layout_height="50.0dip" />
    <View
        android:layout_width="match_parent"
        android:layout_height="0.4dp"
        android:background="@color/colorAccent"/>
    <LinearLayout android:orientation="vertical" android:padding="4.0dip" android:layout_width="match_parent" android:layout_height="wrap_content">
        <fr.ganfra.materialspinner.MaterialSpinner
            android:id="@+id/itemConditionSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:ms_baseColor="@color/colorPrimary"
            app:ms_multiline="false"
            app:ms_hint="@string/label_replacment_condition"
            app:ms_enableFloatingLabel="true"
            app:ms_enableErrorLabel="true"
            app:ms_floatingLabelText="@string/label_fix_type"
            app:ms_thickness="0.5dp"
            app:ms_arrowSize="8dp"
            android:spinnerMode="dialog"
            android:layout_margin="@dimen/global_spacing_xxs"
            app:ms_errorColor="@color/color_btn_negative" />
        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_margin="@dimen/global_spacing_xxs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/itemInfo"
            android:hint="@string/label_replacment_info"
            app:met_floatingLabel="normal"
            android:textSize="12sp"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:divider="@drawable/custom_border" android:showDividers="middle" android:dividerPadding="5.0dip">
        <Button android:id="@+id/btnClose" android:visibility="visible" android:layout_margin="0.0dip" android:text="@string/label_back" android:layout_weight="1.0" style="@style/default_negative_button" />
        <Button android:id="@+id/btnDone" android:visibility="visible" android:layout_margin="0.0dip" android:text="@string/label_process" android:layout_weight="1.0" style="@style/default_button"
            android:clickable="false" />
    </LinearLayout>

</LinearLayout>