<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:background="@drawable/actionbar_backgorund"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/notifIcon"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:src="@drawable/tts_logo" />
        <TextView android:textAppearance="?android:textAppearanceMedium"
            android:textSize="18.0sp"
            android:textStyle="bold" android:textColor="@color/color_white"
            android:gravity="center|left" android:id="@+id/titleMsg" android:paddingLeft="15.0dip" android:paddingTop="5.0dip" android:paddingRight="5.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:text="@string/heading_info" android:layout_height="50.0dip" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.4dp"
        android:background="@color/colorAccent"/>
    <LinearLayout android:orientation="vertical" android:padding="5.0dip" android:layout_margin="10dp" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="11.0sp"
            android:id="@+id/contentMsg" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="3.0dip" android:layout_marginBottom="2.0dip" android:hint="Setting IP Address" android:ems="20"
            android:text="@string/label_info" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:divider="@drawable/custom_border" android:showDividers="middle" android:dividerPadding="5.0dip">
        <Button android:id="@+id/closeBtn" android:visibility="visible" android:layout_margin="0.0dip" android:text="@string/label_back" android:layout_weight="1.0" style="@style/default_negative_button" />
        <Button android:id="@+id/doneBtn" android:visibility="visible" android:layout_margin="0.0dip" android:text="@string/label_process" android:layout_weight="1.0" style="@style/default_button"
            android:clickable="false" />
    </LinearLayout>

</LinearLayout>