<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    android:background="@color/color_white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout android:orientation="vertical" android:padding="4.0dip" android:layout_width="match_parent" android:layout_height="wrap_content">
        <fr.ganfra.materialspinner.MaterialSpinner
            android:id="@+id/assignToSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:ms_baseColor="@color/colorPrimary"
            app:ms_multiline="false"
            app:ms_hint="@string/label_assignment_to"
            app:ms_enableFloatingLabel="true"
            app:ms_enableErrorLabel="true"
            app:ms_floatingLabelText="@string/label_assignment_to"
            app:ms_thickness="0.5dp"
            app:ms_arrowSize="8dp"
            android:spinnerMode="dialog"
            app:ms_errorColor="@color/color_btn_negative" />
        <fr.ganfra.materialspinner.MaterialSpinner
            android:id="@+id/assignTypeSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:ms_baseColor="@color/colorPrimary"
            app:ms_multiline="false"
            app:ms_hint="@string/label_assignment_type"
            app:ms_enableFloatingLabel="true"
            app:ms_enableErrorLabel="true"
            app:ms_floatingLabelText="@string/label_assignment_type"
            app:ms_thickness="0.5dp"
            app:ms_arrowSize="8dp"
            android:spinnerMode="dialog"
            app:ms_errorColor="@color/color_btn_negative" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/assignmentDateET"
            android:hint="@string/label_escalation_action"
            app:met_floatingLabel="normal"
            android:textSize="12sp"
            android:inputType="date"
            android:focusable="false"
            android:focusableInTouchMode="false"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/actionET"
            android:hint="@string/label_escalation_action"
            app:met_floatingLabel="normal"
            android:textSize="12sp"/>

    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:divider="@drawable/custom_border" android:showDividers="middle" android:dividerPadding="5.0dip">
        <Button android:id="@+id/btnClose" android:visibility="visible"
            android:layout_margin="0.0dip" android:text="@string/label_back" android:layout_weight="1.0"
            style="@style/default_negative_button" />
        <Button android:id="@+id/btnDone" android:visibility="visible"
            android:layout_margin="0.0dip" android:text="@string/label_process" android:layout_weight="1.0" style="@style/default_button"
            android:clickable="false" />
    </LinearLayout>

</LinearLayout>